force-app/main/default/objects/Supplier_Item__c/Supplier_Item__c.object-meta.xml
<CustomObject>
    <label>Supplier Item</label>
    <nameField>
        <label>Supplier Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>