force-app/main/default/objects/Supplier_Item__c/fields/Emission_Factors_Scope_3__c.field-meta.xml
<CustomField>
    <fullName>Emission_Factors_Scope_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Emission Factors - Scope 3</label>
    <referenceTo>sustain_app__EmissionFactorScope3__c</referenceTo>
    <relationshipLabel>Supplier Items</relationshipLabel>
    <relationshipName>Supplier_Items</relationshipName>
    <type>Lookup</type>
</CustomField>