force-app/main/default/objects/Supplier_Item__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <label>Item</label>
    <referenceTo>Item__c</referenceTo>
    <relationshipLabel>Suppliers</relationshipLabel>
    <relationshipName>Supplier_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>